# action-setup-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  action.yml  package-lock.json  package.json  pyproject.toml  test_file.py
.github/: dependabot.yml  labels.yml  release-drafter.yml  renovate.json
.github/workflows/: ci.yaml  default.yaml  label-maker.yml  on-pr-target-opened.yml  on-pr.yaml  on-push.yaml  release-management.yml  spell-check.yml
scripts/: install-poetry.sh
